--- a/front/package.json
+++ b/front/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.15.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "react": "^17.0.2",
+    "jwt-decode": "^3.1.2",
+    "rc-footer": "^0.6.6",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.0.5",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
