--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,11 +20,17 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.8.1",
+    "react-native-restart": "^0.0.22",
     "react-native-screens": "^3.1.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
   },
-  "private": true
+  "private": true,
+  "name": "mobile",
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
